--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WeedingPlannerContext": "Server=NASRUDDIN;Database=weedingplanner;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
