--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WeedingPlannerContext": "Server=NASRUDDIN;Database=weedingplanner;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=true"
+    "WeedingPlannerContext": "Server=DESKTOP-8IPCD8M\\SQLEXPRESS;Database=weedingplanner;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=true"
   }
 }
